# liteginxwebservices

./: .gitignore  Cargo.toml  config.env  errors.yaml  set-env.sh
.sqlx/: query-16c7a3f10e51bfaee5be91bf5ada448dc8d1b0e985b4e1cf6e3b75e15332cb19.json
migrations/: 20250506024054_create_users_and_magic_links.sql  20250506024054_users_tokens.sql  20250513153946_projects.sql
src/: conf.rs  main.rs  middleware.rs  token.rs
src/cmd/: migrate.rs  mod.rs
src/pkg/: mod.rs
src/pkg/internal/: auth.rs  email.rs  mod.rs  project.rs  repo.rs  state.rs
src/pkg/internal/auth/: mod.rs  tokens.rs
src/pkg/internal/auth/email/: mod.rs  sender.rs  spec.rs
src/pkg/server/: mod.rs  router.rs  state.rs  uispec.rs
src/pkg/server/handlers/: auth.rs  mod.rs  probes.rs  project.rs  ui.rs
src/pkg/server/middlewares/: authn.rs
src/pkg/utils/: db.rs
templates/: accept_invite.html  buckets.html  containers.html  create_function.html  functions.html  home.html  mod.html  verify.html
